--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "art-template": "^4.11.0",
+    "chalk": "^1.1.3",
     "kcors": "^1.3.2",
     "koa": "^1.2.4",
     "koa-webpack-dev-middleware": "^1.2.2",
@@ -16,7 +17,6 @@
     "opn": "^5.1.0",
     "webpack": "^2.4.1",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-manifest-normalize": "^0.1.0",
     "webpack-merge": "^2.4.0"
   },
   "devDependencies": {
