--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "3.1.4",
+  "version": "4.0.0-beta.1",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -12,6 +12,7 @@
     "chalk": "^1.1.3",
     "kcors": "^1.3.2",
     "koa": "^1.2.4",
+    "koa-proxy": "^0.8.0",
     "koa-static": "^1.5.2",
     "koa-webpack-dev-middleware": "^1.2.2",
     "koa-webpack-hot-middleware": "^1.0.3",
