--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
-    "webpack-build",
-    "webpack-build-view"
+    "webpack3",
+    "webpack4",
+    "webpack build",
+    "webpack hot reload"
   ],
   "dependencies": {
     "art-template": "^4.11.0",
