--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -19,7 +19,7 @@
     "koa-webpack-dev-middleware": "^1.2.2",
     "koa-webpack-hot-middleware": "^1.0.3",
     "opn": "^5.1.0",
-    "webpack": "^4.0.0",
+    "webpack": "4.2.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
