--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "koa": "^1.2.4",
     "koa-proxy": "^0.8.0",
     "koa-static": "^1.5.2",
-    "koa-webpack-dev-middleware": "^1.2.2",
+    "webpack-dev-middleware": "^3.1.3",
     "koa-webpack-hot-middleware": "^1.0.3",
     "opn": "^5.1.0",
     "webpack": "4.2.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
+    "conventional-changelog": "^2.0.0",
     "eslint": "^3.18.0",
     "eslint-config-eslint": "^4.0.0"
   },
@@ -33,7 +34,8 @@
     "lint": "eslint .",
     "fix": "eslint --fix .",
     "test": "mocha test",
-    "ci": "npm run lint && npm run cov"
+    "ci": "npm run lint && npm run cov",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "files": [
     "index.js",
