--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "4.0.3",
+  "version": "4.1.0",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -19,7 +19,7 @@
     "webpack-dev-middleware": "^3.1.3",
     "koa-webpack-hot-middleware": "^1.0.3",
     "opn": "^5.1.0",
-    "webpack": "4.2.0",
+    "webpack": "^4.13.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
@@ -28,7 +28,7 @@
     "eslint-config-eslint": "^4.0.0"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=8.0.0"
   },
   "scripts": {
     "lint": "eslint .",
@@ -44,7 +44,7 @@
     "tool"
   ],
   "ci": {
-    "version": "6, 7"
+    "version": "8,10"
   },
   "repository": {
     "type": "git",
