--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "4.2.0-rc.4",
+  "version": "4.2.0",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
