--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "4.3.0",
+  "version": "4.3.1",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -13,15 +13,11 @@
     "art-template": "^4.11.0",
     "chalk": "^1.1.3",
     "detect-port": "^1.2.3",
-    "http-proxy-middleware": "^0.19.0",
+    "http-proxy": "^1.17.0",
     "kcors": "^1.3.2",
     "koa": "^1.2.4",
-    "koa-connect": "^2.0.1",
     "koa-history-api-fallback": "^0.1.3",
-    "koa-proxy": "^0.8.0",
-    "koa-static": "^1.5.2",
     "koa-webpack-hot-middleware": "^1.0.3",
-    "match-path-plus": "^0.0.3",
     "node-tool-utils": "^1.0.0",
     "opn": "^5.1.0",
     "webpack": "^4.13.0",
