--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "4.3.2",
+  "version": "4.4.1",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -13,6 +13,7 @@
     "art-template": "^4.11.0",
     "chalk": "^1.1.3",
     "detect-port": "^1.2.3",
+    "easy-helper": "^1.0.0",
     "http-proxy": "^1.17.0",
     "kcors": "^1.3.2",
     "koa": "^1.2.4",
