--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "conventional-changelog": "^2.0.0",
+    "conventional-changelog-cli": "^1.3.5",
     "eslint": "^3.18.0",
     "eslint-config-eslint": "^4.0.0"
   },
