--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "4.4.2",
+  "version": "4.4.3",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -22,7 +22,7 @@
     "node-tool-utils": "^1.0.0",
     "opn": "^5.1.0",
     "webpack": "^4.13.0",
-    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-middleware": "3.6.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
