--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "4.4.4",
+  "version": "4.4.5",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -17,7 +17,7 @@
     "http-proxy": "^1.17.0",
     "kcors": "^1.3.2",
     "koa": "^1.2.4",
-    "koa-history-api-fallback": "^0.1.3",
+    "@easy-team/koa-history-api-fallback": "^1.0.0",
     "koa-webpack-hot-middleware": "^1.0.3",
     "node-tool-utils": "^1.0.0",
     "opn": "^5.1.0",
