--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "webpack hot reload"
   ],
   "dependencies": {
+    "@easy-team/koa-history-api-fallback": "^1.0.0",
     "art-template": "^4.11.0",
     "chalk": "^2.0.0",
     "detect-port": "^1.2.3",
     "easy-helper": "^1.0.2",
     "http-proxy": "^1.17.0",
+    "http-proxy-middleware": "^0.20.0",
     "kcors": "^1.3.2",
     "koa": "^1.2.4",
-    "@easy-team/koa-history-api-fallback": "^1.0.0",
+    "koa-connect": "^1.0.0",
     "koa-webpack-hot-middleware": "^1.0.3",
     "node-tool-utils": "^1.0.0",
     "opn": "^5.1.0",
