--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "4.5.4",
+  "version": "5.0.0-beta.1",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@easy-team/koa-history-api-fallback": "^1.0.0",
     "art-template": "^4.11.0",
-    "chalk": "^2.0.0",
+    "chalk": "^4.1.0",
     "detect-port": "^1.2.3",
     "easy-helper": "^1.0.2",
     "http-proxy": "^1.17.0",
@@ -22,18 +22,18 @@
     "koa-connect": "^1.0.0",
     "koa-webpack-hot-middleware": "^1.0.3",
     "node-tool-utils": "^1.0.0",
-    "opn": "^5.1.0",
-    "webpack": "4.28.4",
+    "opn": "^6.0.0",
+    "webpack": "^5.0.0-beta.29",
     "webpack-dev-middleware": "3.6.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^5.1.3"
   },
   "devDependencies": {
-    "conventional-changelog-cli": "^1.3.5",
-    "eslint": "^3.18.0",
-    "eslint-config-eslint": "^4.0.0"
+    "conventional-changelog-cli": "^2.1.0",
+    "eslint": "^7.8.1",
+    "eslint-config-eslint": "^6.0.0"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=8.0.0"
   },
   "scripts": {
     "lint": "eslint .",
@@ -49,16 +49,19 @@
     "tool"
   ],
   "ci": {
-    "version": "6,8,10"
+    "version": "8, 10, 12, 14"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hubcarl/webpack-tool.git"
+    "url": "git+https://github.com/easy-team/webpack-tool.git"
+  },
+  "publishConfig": {
+    "tag": "5x"
   },
   "bugs": {
-    "url": "https://github.com/hubcarl/webpack-tool/issues"
+    "url": "https://github.com/easy-team/webpack-tool/issues"
   },
-  "homepage": "https://github.com/hubcarl/webpack-tool#readme",
+  "homepage": "https://github.com/easy-team/webpack-tool#readme",
   "author": "hubcarl@126.com",
   "license": "MIT"
 }
