--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "detect-port": "^1.2.3",
     "easy-helper": "^1.0.2",
     "http-proxy": "^1.17.0",
-    "http-proxy-middleware": "^0.20.0",
-    "kcors": "^1.3.2",
-    "koa": "^1.2.4",
-    "koa-connect": "^1.0.0",
+    "http-proxy-middleware": "^1.0.5",
+    "kcors": "^2.2.2",
+    "koa": "^2.13.0",
+    "koa-connect": "^2.1.0",
     "koa-webpack-hot-middleware": "^1.0.3",
     "node-tool-utils": "^1.0.0",
     "opn": "^6.0.0",
     "webpack": "^5.0.0-beta.29",
-    "webpack-dev-middleware": "3.6.0",
-    "webpack-merge": "^5.1.3"
+    "webpack-dev-middleware": "4.0.0-rc.3",
+    "webpack-merge": "^4.0.0"
   },
   "devDependencies": {
     "conventional-changelog-cli": "^2.1.0",
