--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "webpack hot reload"
   ],
   "dependencies": {
-    "@easy-team/koa-history-api-fallback": "^1.0.0",
     "art-template": "^4.11.0",
     "chalk": "^4.1.0",
     "detect-port": "^1.2.3",
@@ -19,12 +18,12 @@
     "http-proxy-middleware": "^1.0.5",
     "kcors": "^2.2.2",
     "koa": "^2.13.0",
-    "koa-connect": "^2.1.0",
-    "koa-webpack-hot-middleware": "^1.0.3",
+    "koa2-connect": "^1.0.2",
     "node-tool-utils": "^1.0.0",
     "opn": "^6.0.0",
     "webpack": "^5.0.0-beta.29",
     "webpack-dev-middleware": "4.0.0-rc.3",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.0.0"
   },
   "devDependencies": {
