--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-tool",
-  "version": "5.0.0-beta.2",
+  "version": "5.0.0",
   "description": "webpack build and webpack build result web view",
   "keywords": [
     "webpack",
@@ -21,7 +21,7 @@
     "koa2-connect": "^1.0.2",
     "node-tool-utils": "^1.0.0",
     "opn": "^6.0.0",
-    "webpack": "^5.0.0-beta.29",
+    "webpack": "^5.0.0",
     "webpack-dev-middleware": "4.0.0-rc.3",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.0.0"
@@ -32,7 +32,7 @@
     "eslint-config-eslint": "^6.0.0"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "scripts": {
     "lint": "eslint .",
@@ -48,7 +48,7 @@
     "tool"
   ],
   "ci": {
-    "version": "8, 10, 12, 14"
+    "version": "10, 12, 14"
   },
   "repository": {
     "type": "git",
